<resources>
    <string name="app_name">Car Doctor</string>
    <string name="lblLogIn">LogIn</string>
    <string name="txtUserName"></string>
    <string name="lblUsersName">User Name</string>
    <string name="lblPassword">Password</string>
    <string name="chkrememberMe">Remember Me</string>
    <string name="linkFogotPassword">Forgot Password</string>
    <string name="btnLogIn">Log In</string>
    <string name="linksignUps">Or SignUp</string>
    <string name="lblRegisterForm">Register</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtNIC">NIC</string>
    <string name="txtPhoneNumber">Phone Number</string>
    <string name="txtAddress">Address</string>
    <string name="txtEmail">Email</string>
    <string name="txtGetPassword">Password</string>
    <string name="txtGetConfirmPassword">Re-Enter Password</string>
    <string name="btnRegister">Register</string>
    <string name="lblGetPassword">Password</string>
    <string name="lblConfirmPassword">Re-Enter Password</string>
    <string name="tblRowOderId">OderId</string>
    <string name="tblRowCustomerId">Cus_ID</string>
    <string name="tblRowItemCode">Item_Code</string>
    <string name="tblrowQty">Qty</string>
    <string name="tblRowDate">Date</string>
    <string name="tblbtnApproval">Approval</string>
    <string name="tblBtnreject">Reject</string>
    <string name="appName">Car Doctor</string>
    <string name="lblNewOrderDetails">New Order Details</string>
    <string name="lblItemName">Item Name</string>
    <string name="lblMainMenu">Main Menu</string>
    <string name="btnMyAcc">My Account</string>
    <string name="btnItemSettings">Item Settings</string>
    <string name="btnOderDetails">Oder Details</string>
    <string name="btnContactUs">Contact Us</string>
    <string name="btnTerms">Terms and Conditions</string>
    <string name="txtSearch">Search</string>
    <string name="lblItem">ITEMS </string>
    <string name="btnViewItem">View Items</string>
    <string name="btnAddItems">Add Items</string>
    <string name="btnReport">Report</string>
    <string name="lblOrderDetails">ORDER DETAILS</string>
    <string name="btnFinishedOders">Finished Order</string>
    <string name="btnApprovedList">Approved List</string>
    <string name="lblPayment">Payment</string>
    <string name="lblMyAccount">My Account</string>
    <string name="lblSampleName">Name : XXXXXXXXXXXXXXXX</string>
    <string name="txtSamplePhone">XXXXXXXXX</string>
    <string name="txtSampleEmail">sample@sample.com</string>
    <string name="txtsampleAddress">New Kandy road, Malabe</string>
    <string name="btnUpdateDetails">Update Details</string>
    <string name="lblClickToChangePassword">Click To Change Password</string>
    <string name="lblChangePassword">Change Password</string>
    <string name="lblOldPassword">Old Password</string>
    <string name="lblNewPassword">New Password</string>
    <string name="lblReEnterPassword">Re-Enter Password</string>
    <string name="btnUpdatePassword">Update Password</string>
    <string name="lblAddItem">ADD ITEMS</string>
    <string name="lblBrandName">Brand Name</string>
    <string name="lblWight">Weight</string>
    <string name="lblSize">Size</string>
    <string name="lblUnitPrice">Unit Price</string>
    <string name="btnSubmitDetails">Submit Details</string>
    <string name="lblEditItems">Edit Items</string>
    <string name="lblViewItems">View Items</string>
    <string name="lbltotAmount">Total Amount = Rs.XXXX.XX</string>
    <string name="lblStatus">Status</string>
    <string name="lblVal">Sam_val</string>
    <string name="btnMore">More..</string>
</resources>